Fixed PaO2 value overflow & added hyperoxia option

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
   transition: background 0.2s linear;
 }
 
+
 div.container {
   position: absolute;
   top: 10px;
@@ -81,6 +82,14 @@ div.dark-toggle {
   font-size: 13px;
   display: flex;
   align-items: center;
+}
+
+span {
+  min-width: 15%;
+  text-align: center;
+}
+input {
+  min-width: 100%;
 }
 
 .button-59 {
